Implement plugin management
